--- a/briar-android/src/main/res/values-pt-rBR/strings.xml
+++ b/briar-android/src/main/res/values-pt-rBR/strings.xml
@@ -31,9 +31,11 @@
   <string name="dialog_title_lost_password">Perdeu a senha</string>
   <string name="dialog_message_lost_password">Sua conta Briar é armazenada em seu dispositivo e criptografada, não na Nuvem, assim não podemos recuperar a senha. Você quer deletar sua conta e começar de novo?\n\nAtenção: Isso irá apagar permanentemente suas identidades, contatos e mensagens</string>
   <string name="startup_failed_notification_title">Briar não pode iniciar</string>
-  <string name="startup_failed_notification_text">Você pode precisar reinstalar o Briar.</string>
+  <string name="startup_failed_notification_text">Pressione para mais informações.</string>
   <string name="startup_failed_activity_title">Inicialização do Briar falhou</string>
-  <string name="startup_failed_db_error">Por algum motivo, seu banco de dados do Briar foi corrompido enão pode ser reparado. Sua conta, seus dados e todos seus contatos estão perdidos. Infelizmente, você precisa reinstalar o Briar e criar uma nova conta.</string>
+  <string name="startup_failed_db_error">Por algum motivo, o banco de dados do seu Briar está corrompido e não é possível repará-lo. Sua conta, seus dados e seus contatos foram perdidos. Infelizmente, você precisará reinstalar o Briar e criar uma nova conta escolhendo a opção \'Esqueci minha senha\'.</string>
+  <string name="startup_failed_data_too_old_error">Sua conta foi criada numa versão mais antiga do aplicativo e não pode ser aberta nesta versão. Você pode reinstalar a versão antiga ou deleter sua conta antiga escolhendo a opção \"Esqueci minha senha\".</string>
+  <string name="startup_failed_data_too_new_error">A versão deste aplicativo é muito antiga. Por favor, atualize para a versão mais nova e tente novamente.</string>
   <string name="startup_failed_service_error">O Briar não pode iniciar devido a um plugin. Reinstalar o Briar geralmente resolve esse problema. Porém, note que ao fazer isso você perderá sua conta e todos os dados associados a ela,  já que o Briar não usa um servidor central para armazenar seus dados.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Esta é uma versão de teste do Briar. Sua conta irá expirar em %d dia e não poderá ser renovada.</item>
@@ -95,6 +97,7 @@
   <string name="show_onboarding">Mostrar dialogo de ajuda</string>
   <string name="fix">Consertar</string>
   <string name="help">Ajuda</string>
+  <string name="sorry">Sentimos muito</string>
   <!--Contacts and Private Conversations-->
   <string name="no_contacts">Parece que você é novo aqui e ainda não tem contatos.\nClique no ícone + no topo e siga as instruções para adicionar alguns amigos para sua lista.\nPor favor lembre: você só pode adicionar contatos pessoalmente para prevenir alguém se passar por você ou ler suas mensagens no futuro. </string>
   <string name="date_no_private_messages">Sem Mensagens</string>
@@ -116,6 +119,7 @@
   <string name="contact_already_exists">Contato %s já existe</string>
   <string name="contact_exchange_failed">Troca de contatos falhou</string>
   <string name="qr_code_invalid">O QR code é inválido</string>
+  <string name="qr_code_unsupported">O código QR que você está tentando escanear é de uma versão antiga do %s, que não é mais suportada.\n\nPor favor, verifique que você e a outra pessoa está usando a versão mais recente e tentem de novo.</string>
   <string name="camera_error">Erro da câmera</string>
   <string name="connecting_to_device">Conectando a device\u2026</string>
   <string name="authenticating_with_device">Autenticando com o dispositivo\u2026</string>
@@ -369,7 +373,8 @@
   <string name="progress_title_logout">Saindo do Briar…</string>
   <!--Screen Filters & Tapjacking-->
   <string name="screen_filter_title">Sobreposição de tela detectada</string>
-  <string name="screen_filter_body">Outro aplicativo está rodando por cima do Briar. Para proteger sua segurança, o Briar não irá responder por toques quando outro aplicativo estiver por cima.\n\nTente desligar os seguintes aplicativos quando for usar o Briar:\n\n %1$s</string>
+  <string name="screen_filter_body">Outro aplicativo está se sobrepondo sobre o Briar. Para proteger sua segurança, Briar não responderá a seus toques enquanto estiver sobreposto.\n\nOs seguintes aplicativos podem estar se sobrepondo:\n\n%1$s</string>
+  <string name="screen_filter_allow">Permitir que estes aplicativos se sobreponham</string>
   <!--Permission Requests-->
   <string name="permission_camera_title">Permissão da câmera</string>
   <string name="permission_camera_request_body">O Briar precisa acessar a câmera para pode escanear o QR code.</string>
